[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/match/SubstitutionPanel.gd" id="1"]
[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12

[node name="SubstitutionPanel" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
visible = false
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.55)
mouse_filter = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -360.0
offset_right = 520.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("1")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 28.0
margin_right = -32.0
margin_bottom = -28.0
theme_override_constants/separation = 24

[node name="Header" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
text = "교체 선택"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="RemainingLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
text = "교체 횟수: 3/3 남음"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ListContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="StarterColumn" type="VBoxContainer" parent="Panel/VBox/ListContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StarterLabel" type="Label" parent="Panel/VBox/ListContainer/StarterColumn"]
layout_mode = 2
text = "선발 11명"
theme_override_font_sizes/font_size = 24

[node name="StartersList" type="ItemList" parent="Panel/VBox/ListContainer/StarterColumn"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
select_mode = 1

[node name="BenchColumn" type="VBoxContainer" parent="Panel/VBox/ListContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="BenchLabel" type="Label" parent="Panel/VBox/ListContainer/BenchColumn"]
layout_mode = 2
text = "벤치"
theme_override_font_sizes/font_size = 24

[node name="BenchList" type="ItemList" parent="Panel/VBox/ListContainer/BenchColumn"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
select_mode = 1

[node name="ButtonRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="ConfirmButton" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 64)
text = "교체 확정"
disabled = true

[node name="CancelButton" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 64)
text = "취소"
